bootctl/src/main/cpp/libcxx/test/libcxx/experimental/utilities/tuple/use_header_warning.fail.cpp
//===----------------------------------------------------------------------===//
//
//                     The LLVM Compiler Infrastructure
//
// This file is dual licensed under the MIT and the University of Illinois Open
// Source Licenses. See LICENSE.TXT for details.
//
//===----------------------------------------------------------------------===//

// REQUIRES: verify-support

// <experimental/tuple>

#include <experimental/tuple>

// expected-error@experimental/tuple:* {{"<experimental/tuple> has been removed. Use <tuple> instead."}}

int main() {}
